Fix GitHub binary https://stackoverflow.com/questions/6855712/why-does-git-treat-this-text-file-as-a-binary-file

--- a/panyi/panyi.ini
+++ b/panyi/panyi.ini
@@ -19,7 +19,7 @@ IDS_WEB_FAILED=The page cannot be loaded due to network reasons,\nPlease refresh
 IDS_WEB_REFRESH=Refresh
 IDS_GET_TEXT_HEIGHT=1１
 IDS_MSGBOX_OPEN_MAINFRAME=Open network disk(&O)
-IDS_MSGBOX_VIEW_ALL=View all
+IDS_MSGBOX_VIEW_ALL=View All
 IDS_MSGBOX_IGNORE_ALL=Ignore
 IDS_CRT_GRP_NO_RT_DETAIL=View details
 IDS_SYSMSG_TITLE=System prompt
